Fix desktop sticky spacing

--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ td {
 
 @media screen and (min-width: 768px) {
   .page--title {
-    margin-top: 96px;
+    margin-top: 90px;
   }
 }
 
